my profile page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Enrique Stolar | Profile</title>
+  <title>Enrique Stolar | Profile </title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media_queries.css">
   <script src="https://kit.fontawesome.com/dc6cd087c3.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
 <body>
   <div class="container">
     <div class="boxes">
-      <h1 class="press-start-2p-regular">Hello, I am Enrique Stolar</h1>
+      <h1 class="press-start-2p-regular">Hello, I am Enrique Stolar :)</h1>
       <img src="images/photo_profile.png" alt="enrique stolar's photo">
       <h2 class="press-start-2p-regular">Developer, Professor and Entrepreneur</h2>
       <p class="press-start-2p-regular">
